package eapli.base.productmanagement.domain;

import eapli.framework.domain.model.ValueObject;

import java.io.Serializable;

public class ProductionCode implements ValueObject, Serializable {
}
