package eapli.base.productmanagement.domain;

public class Weight {
}
