@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Product" {
    entity Product
    class ShortDescription
    class LongDescription
    class TechnicalDescription
    class Barcode
    class ProductionCode
    class PriceWithoutVAT
    class PriceWithVAT
    class Size
    class Reference
    class Weight
    class Volume
    class Photo
    class BrandName
}

entity Product <<entity>> <<root>> {
    - uniqueInternalCode
}

class ShortDescription <<(V,#FF8B40) value object>>
class LongDescription <<(V,#FF8B40) value object>>
class TechnicalDescription <<(V,#FF8B40) value object>>
class Barcode <<(V,#FF8B40) value object>>
class ProductionCode <<(V,#FF8B40) value object>>
class PriceWithoutVAT <<(V,#FF8B40) value object>> {}
class PriceWithVAT <<(V,#FF8B40) value object>> {}
class Size <<(V,#FF8B40) value object>>
class Reference <<(V,#FF8B40) value object>> {}
class Weight <<(V,#FF8B40) value object>> {}
class Volume <<(V,#FF8B40) value object>> {}
class Photo <<(V,#FF8B40) value object>>{}
class BrandName <<(V,#FF8B40) value object>>{}

package "<<aggregate>> Category" {
    entity Category
    class AlphanumericCode
    class Description
    class SuperCategory
    }

entity Category <<entity>> <<root>> {

}

class AlphanumericCode <<(V,#FF8B40) value object>>
class Description <<(V,#FF8B40) value object>>
class SuperCategory <<(V,#FF8B40) value object>>


Product ----> "1" Category : organized by
Product ---> "1" ShortDescription: characterized by
Product --> "1" LongDescription: characterized by
Product --> "1" TechnicalDescription: characterized by
Product --> "1" Barcode: identified by
Product --> "0..1" ProductionCode: identified by
Product --> "1" PriceWithoutVAT: associated
Product --> "1" PriceWithVAT: associated
Product --> "1" Size: associated
Product --> "1" Weight: characterized by
Product --> "1" Volume: characterized by
Product --> "1" Reference : identified by
Product --> "1..*" Photo : described
Product ---> "1" BrandName : made by


Category --> "1" AlphanumericCode : identified by
Category --> "1" Description : characterized by
Category --> "0..1" SuperCategory : belongs to

@enduml